--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.0"
   },
-  "packageManager": "yarn@4.12.0"
+  "packageManager": "npm@11.6.2"
 }
