--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@mantine/core": "8.3.10",
     "@mantine/hooks": "8.3.10",
+    "classnames": "2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "todomvc-app-css": "2.4.3",
+    "todomvc-common": "1.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
