test: import todomvc cypress tests

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "mantine-vite-template",
+  "name": "tweedledo-list-mantine",
   "private": true,
   "type": "module",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:clean": "rm -rf ./dist && npm run build",
     "preview": "vite preview",
+    "preview:clean": "killall node ; npm run build:clean && npm run preview &",
     "typecheck": "tsc --noEmit",
     "lint": "npm run eslint && npm run stylelint",
     "eslint": "eslint . --cache",
@@ -15,7 +17,10 @@
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "vitest": "vitest run",
     "vitest:watch": "vitest",
-    "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run --browser chrome",
+    "cy:test": "npm run preview:clean && npm run cy:run",
+    "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build && npm run cy:run",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
@@ -43,6 +48,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "cypress": "3.8.3",
     "eslint": "^9.37.0",
     "eslint-config-mantine": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
