feat: cart workflow

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview:clean": "killall node ; npm run build:clean && npm run preview &",
     "typecheck": "tsc --noEmit",
     "lint": "npm run eslint && npm run stylelint",
+    "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
     "eslint": "eslint . --cache",
+    "eslint:fix": "eslint . --cache --fix",
     "stylelint": "stylelint '**/*.css' --cache",
+    "stylelint:fix": "stylelint '**/*.css' --cache --fix",
     "prettier": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "vitest": "vitest run",
@@ -20,7 +23,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --browser chrome",
     "cy:test": "npm run preview:clean && npm run cy:run",
-    "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run cy:test",
+    "test": "npm run typecheck && npm run prettier:write && npm run lint:fix && npm run vitest && npm run cy:test",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
