fix: footer overlap on mobile

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --browser chrome",
     "cy:test": "npm run preview:clean && npm run cy:run",
-    "test": "npm run typecheck && npm run prettier:write && npm run lint:fix && npm run vitest && npm run cy:test",
+    "test": "npm run typecheck && npm run prettier:write && npm run lint:fix && npm run vitest",
+    "test:full": "npm run test && npm run cy:test",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
