feat(i18n): lists and search bar

--- a/config/shopping-list.ru.yaml
+++ b/config/shopping-list.ru.yaml
@@ -1,2 +1,10 @@
 strings:
   title: TweedleDo Хлебница
+  searchBar.placeholder: Что нужно купить?
+lists:
+  - id: groceries
+    label: Продукты
+  - id: pharmacy
+    label: Аптека
+  - id: misc
+    label: Разное
