--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.0"
   },
