--- a/config/shopping-list.yaml
+++ b/config/shopping-list.yaml
@@ -1,11 +1,44 @@
 strings:
+  appName: ATD Shoplist
   title: TweedleDo Shopping List
+  description: artyhedgehog's TweedleDo Shopping List app
   searchBar.placeholder: What do I need to buy?
+  footer.archiveCompleted: Check out
+  todoItem.unarchive: Out of stock
+
 lists:
   - id: groceries
+    hash: 
     label: Groceries
   - id: pharmacy
     label: Pharmacy
   - id: misc
     label: Misc
+
+states:
+  - id: stock
+    label: Stock
+    filter: archived
+    hash: '#/archived'
+  - id: shop
+    label: Shop!
+    filter: all
+    hash: '#/'
+  - id: buy
+    label: To buy
+    filter: active
+    hash: '#/active'
+  - id: cart
+    label: Cart
+    filter: completed
+    hash: '#/completed'
+filters:
+  all:
+    value: archived eq false
+  active:
+    value: completed eq false and archived eq false
+  completed:
+    value: completed eq true and archived eq false
+  archived:
+    value: archived eq true
 
